<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>stel</groupId>
  <artifactId>stel</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
  <dependencies>



		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>


		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.0.1</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>21.0</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.9.10</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.14</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.14</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.relevantcodes</groupId>
			<artifactId>extentreports</artifactId>
			<version>2.41.1</version>
			<scope>compile</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
<dependency>
    <groupId>commons-io</groupId>
    <artifactId>commons-io</artifactId>
    <version>2.11.0</version>
</dependency>


		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>

		<dependency>
			<groupId>net.sourceforge.jexcelapi</groupId>
			<artifactId>jxl</artifactId>
			<version>2.6.12</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>5.0.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
		<!-- <dependency> -->
		<!-- <groupId>info.cukes</groupId> -->
		<!-- <artifactId>cucumber-junit</artifactId> -->
		<!-- <version>1.2.4</version> -->
		<!-- <scope>test</scope> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-testng</artifactId>
			<version>1.2.4</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.4</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>6.8.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-jvm -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm</artifactId>
			<version>1.2.4</version>
			<type>pom</type>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.github.temyers/cucumber-jvm-parallel-plugin -->
		<dependency>
			<groupId>com.github.temyers</groupId>
			<artifactId>cucumber-jvm-parallel-plugin</artifactId>
			<version>4.2.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>3.0.0</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>4.4.3</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.2</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>

	<build>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>


			<plugin>
				<groupId>com.github.temyers</groupId>
				<artifactId>cucumber-jvm-parallel-plugin</artifactId>
				<version>4.2.0</version>
				<executions>
					<execution>
						<id>generateRunners</id>
						<phase>generatetest-resources</phase>
						<goals>
							<goal>generateRunners</goal>
						</goals>
						<configuration>
							<glue>stepdef</glue>
							<outputDirectory>${project.build.directory}/generated-test-sources</outputDirectory>
							<featuresDirectory>src/test/resources/features</featuresDirectory>
							<cucumberOutputDir>${project.build.directory}</cucumberOutputDir>
							<format>json</format>
							<!--<strict>true</strict> <monochrome>true</monochrome> <useTestNG>false</useTestNG> 
								<namingScheme>simple</namingScheme> -->
							<parallelScheme>FEATURE</parallelScheme>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<suiteXmlFiles>
						<suiteXmlFile>testng.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>


				<!-- RUN ALL CLASSES CREATED BY cucumber-jvm-parallel-plugin IN PARALLEL -->
				<!-- <executions> -->
				<!-- <execution> -->
				<!-- <id>integration-test</id> -->
				<!-- <phase>integration-test</phase> -->
				<!-- <goals> -->
				<!-- <goal>test</goal> -->
				<!-- </goals> -->
				<!-- <configuration> -->
				<!-- <forkCount>5</forkCount> -->
				<!-- <reuseForks>true</reuseForks> -->
				<!-- <includes> -->
				<!-- <include>**/Parallel*IT.class</include> -->
				<!-- </includes> -->
				<!-- <includes> -->
				<!-- <include>**/RegressionIT.java</include> -->
				<!-- </includes> -->
				<!-- </configuration> -->
				<!-- </execution> -->
				<!-- </executions> -->
			</plugin>

			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>5.0.0</version>
				<executions>
					<execution>
						<id>execution</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<projectName>Test Automation</projectName>
							<outputDirectory>${project.build.directory}</outputDirectory>
							<inputDirectory>${project.build.directory}</inputDirectory>
							<jsonFiles>
								<param>**/cucumber*.json</param>
							</jsonFiles>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>

	</build>


	<profiles>
		<profile>
			<id>selenium-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.19.1</version>
						<configuration>
							<suiteXmlFiles>
								<suiteXmlFile>testng.xml</suiteXmlFile>
							</suiteXmlFiles>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<!-- <profiles> -->
	<!-- <profile> -->
	<!-- <id>integration-test</id> -->
	<!-- <build> -->
	<!-- <plugins> -->
	<!-- <plugin> -->
	<!-- <groupId>org.apache.maven.plugins</groupId> -->
	<!-- <artifactId>maven-failsafe-plugin</artifactId> -->
	<!-- <configuration> -->
	<!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> -->
	<!-- <excludes> -->
	<!-- <exclude>**/*_Roo_*</exclude> -->
	<!-- </excludes> -->
	<!-- <includes> -->
	<!-- <include>**/*IntegrationTest.java</include> -->
	<!-- <include>**/*IT.java</include> -->
	<!-- </includes> -->
	<!-- </configuration> -->
	<!-- <executions> -->
	<!-- <execution> -->
	<!-- <goals> -->
	<!-- <goal>integration-test</goal> -->
	<!-- <goal>verify</goal> -->
	<!-- </goals> -->
	<!-- </execution> -->
	<!-- </executions> -->
	<!-- </plugin> -->
	<!-- </plugins> -->
	<!-- </build> -->
	<!-- </profile> -->
	<!-- </profiles> -->
  
  
</project>